--- a/MusicStore/Views/Store/Browse.cshtml
+++ b/MusicStore/Views/Store/Browse.cshtml
@@ -5,3 +5,12 @@
 }
 
 <h2>Browsing Genre: @Model.Name</h2>
+
+<ul>
+    @foreach (var album in Model.Albums)
+    {
+        <li>
+            @Html.ActionLink(album.Title, "Details", new {id = album.AlbumId})
+        </li>
+    }
+</ul>
